tests/tools/typecheck/negative/missing_return.nv
fn bad(x: bool) : int {
    if (x) {
        return 1;
    }
}

fn main() : void {
    return;
}
